@@ -67,3 +67,5 @@ weight, node
 0.03 : [0.88, 0.95]
 
     orderDecreasing = [11,9,10,5,4,0,8,14,3,1,6,13,7,2,12]
+sample5.add(sample5)=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=6 dimension=1 data=[[1],[3],[2],[1],[3],[2]]
+sample5.stack(sample5)=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=6 dimension=2 data=[[1,1],[3,3],[2,2],[1,1],[3,3],[2,2]]
