@@ -118,6 +118,7 @@
  * #2306 (Dirichlet::computeConditionalPDF can produce NaNs and Infs)
  * #2323 (Minor wording issues in the cross entropy importance sampling example)
  * #2327 (A sign mistake in FGM document)
+ * #2328 (Sample.add weird behaviour)
 
 
 == 1.20 release (2022-11-08) == #release-1.20
